Update tags search to support IN and NIN. Integ tests pass.